books/python-functional-programming/src/examples/generators/yield_outside_any_function.out
  File "examples/generators/yield_outside_any_function.py", line 2
    yield "ok";
    ^
SyntaxError: 'yield' outside function
