books/python-functional-programming/src/examples/generators/yield_outside_any_function.py
print("one")
yield "ok";
print("two")
